[#24] added basic support for services
- added detecting kea in agent
- added storing service information in database
- added in webui presenting services list and information
  about particular service
