# api/swagger.yaml
@@ -176,7 +176,6 @@ paths:
       summary: Get list of machines.
       description: >-
         It is possible to filter list of machines by several fields. It is also always paged.
-        Default page size is 10.
         A list of machines is returned in items field accompanied by total count
         which indicates total available number of records for given filtering
         parameters.
@@ -308,6 +307,58 @@ paths:
           description: Machine
           schema:
             $ref: "#/definitions/Machine"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/ApiError"
+
+  /services:
+    get:
+      summary: Get list of Services.
+      description: >-
+        It is possible to filter list of services by several fields. It is also always paged.
+        A list of machines is returned in items field accompanied by total count
+        which indicates total available number of records for given filtering
+        parameters.
+      operationId: getServices
+      tags:
+        - Services
+      parameters:
+        - $ref: '#/parameters/paginationStartParam'
+        - $ref: '#/parameters/paginationLimitParam'
+        - $ref: '#/parameters/filterTextParam'
+        - name: service
+          in: query
+          description: Limit returned list of services, possible values 'bind' or 'kea'.
+          type: string
+      responses:
+        200:
+          description: List of services
+          schema:
+            $ref: "#/definitions/Services"
+        default:
+          description: generic error response
+          schema:
+            $ref: "#/definitions/ApiError"
+
+  /services/{id}:
+    get:
+      summary: Get service by ID.
+      description: Get service by the database specific ID.
+      operationId: getService
+      tags:
+        - Services
+      parameters:
+        - in: path
+          name: id
+          type: integer
+          required: true
+          description: Service ID.
+      responses:
+        200:
+          description: A service
+          schema:
+            $ref: "#/definitions/Service"
         default:
           description: generic error response
           schema:
@@ -460,6 +511,21 @@ definitions:
       error:
         type: string
         readOnly: true
+      services:
+        type: array
+        items:
+          $ref: '#/definitions/MachineService'
+
+  MachineService:
+    type: object
+    properties:
+      id:
+        type: integer
+      type:
+        type: string
+      version:
+        type: string
+
   Machines:
     type: object
     properties:
@@ -467,6 +533,78 @@ definitions:
         type: array
         items:
           $ref: '#/definitions/Machine'
+      total:
+        type: integer
+
+  Service:
+    type: object
+    properties:
+      id:
+        type: integer
+        readOnly: true
+      type:
+        type: string
+      ctrlPort:
+        type: integer
+      active:
+        type: boolean
+      version:
+        type: string
+      machine:
+        $ref: '#/definitions/ServiceMachine'
+      details:
+        allOf:
+          - $ref: '#/definitions/ServiceKea'
+          - $ref: '#/definitions/ServiceBind'
+
+  KeaDaemon:
+    type: object
+    properties:
+      pid:
+        type: integer
+      name:
+        type: string
+      active:
+        type: boolean
+      version:
+        type: string
+      extendedVersion:
+        type: string
+
+  ServiceKea:
+    type: object
+    properties:
+      extendedVersion:
+        type: string
+      daemons:
+        type: array
+        items:
+          $ref: '#/definitions/KeaDaemon'
+
+  ServiceBind:
+    type: object
+    properties:
+      todo:
+        type: string
+
+  ServiceMachine:
+    type: object
+    properties:
+      id:
+        type: integer
+        readOnly: true
+      address:
+        type: string
+      hostname:
+        type: string
+
+  Services:
+    type: object
+    properties:
+      items:
+        type: array
+        items:
+          $ref: '#/definitions/Service'
       total:
         type: integer
 
